fixed :hover css stuff on mobile, no longer triggers :hover

--- a/src/components/socials.scss
+++ b/src/components/socials.scss
@@ -27,6 +27,10 @@
 
 .socials-sidebar-icon:hover {
     fill: $color-primary;
+
+    @media (hover: none) {
+        fill: $color-secondary;
+    }
 }
 
 .socials-sidebar-line {
